--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libDaisy"]
 	path = libDaisy
 	url = https://github.com/electro-smith/libDaisy
-[submodule "DaisySP"]
-	path = DaisySP
-	url = https://github.com/electro-smith/DaisySP
+[submodule "virveldsp"]
+	path = virveldsp
+	url = https://github.com/virvel/virveldsp
